apps/sonarqube/base/resources/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-sonarqube
  namespace: sonarqube
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-sonarqube
  hostnames:
    - sonarqube.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarqube-sonarqube
          port: 9000
